# lv_ej_workspace

./: .gitignore  .gitmodules  README.md  config.toml
esp32s3/: sdkconfig.defaults
esp32s3/main/: dispaly_lvgl_demos_main.c
rpi4/: .gitignore  CMakeLists.txt  lv_conf_rpi4-sdl.h  lv_conf_rpi4-wayland.h
rpi4/scripts/: gen_wl_protocols.sh
rpi4/src/: main.c
service/: ejb.env  ejb.service
